# base

./: .gitignore  .gitmodules  BaseName.10x  CMakeLists.txt  Makefile  UI_Sample  UI_Sample_Release  build.bat  build.sh  imgui.ini  project.4coder  todolist  workspace.10x
.cache/clangd/index/: Tracy.hpp.9DB678B2640697C8.idx  TracyAlign.hpp.123E175B03B784EC.idx  TracyAlloc.cpp.0A2E452A9BCBDFF4.idx  TracyAlloc.hpp.ECD014C40A047E97.idx  TracyApi.h.75287C5E76015141.idx  TracyArmCpuTable.hpp.CC44E4C060B7E293.idx  TracyC.h.CAB5B4CC532D161C.idx  TracyCallstack.cpp.EDDD4A69D090064F.idx  TracyCallstack.h.B9F5F676C3B97841.idx  TracyCallstack.hpp.6C34504081FB75B5.idx  TracyClient.cpp.BE83236827859D2F.idx  TracyColor.hpp.0715204D8A060A19.idx  TracyCpuid.hpp.6079B15E36CF1EF4.idx  TracyDebug.hpp.1A51B7228B96992E.idx  TracyDxt1.cpp.2D33CC04E24B1303.idx  TracyDxt1.hpp.52F1893E9730E8F3.idx  TracyFastVector.hpp.02239D2A7261FC42.idx  TracyForceInline.hpp.44CB83AB180ADA21.idx  TracyKCore.cpp.3B14FE398EBB5F27.idx  TracyKCore.hpp.6C38FBD50E36D0F1.idx  TracyLock.hpp.B2E7C28926D046FD.idx  TracyMutex.hpp.BEF381E47986E5BF.idx  TracyOverride.cpp.3E70AF6598824525.idx  TracyProfiler.cpp.2E7D49ECEC5EC434.idx  TracyProfiler.hpp.2AE4381C6DA4E51B.idx  TracyProtocol.hpp.01C8FC7DC51B76BC.idx  TracyQueue.hpp.BD528B3E76DD31CE.idx  TracyRingBuffer.hpp.9A4F6A6A291C0462.idx  TracyScoped.hpp.3F3446FB60A1027E.idx  TracySocket.cpp.208000EE3D5E599C.idx  TracySocket.hpp.BCEAE7CDE1C279F5.idx  TracyStackFrames.cpp.30C3AF92D11EF631.idx  TracyStackFrames.hpp.0065D85CC32065D1.idx  TracyStringHelpers.hpp.3487339188B021BC.idx  TracySysPower.cpp.404CC8AD4870B14A.idx  TracySysPower.hpp.93C15C34B280B1B4.idx  TracySysTime.cpp.34C088AFBD263A7E.idx  TracySysTime.hpp.CB7738C08504BAE7.idx  TracySysTrace.cpp.B0B1F502887F0C0D.idx  TracySysTrace.hpp.40F5460563E6E2B3.idx  (+55 more)
code/: DynamicVector.cpp  DynamicVector.h  HashTable.c  HashTable.h  allocator.h  commanding.h  draw.h  files.h  load_font.h  load_font_ft2.h  memory.h  net.h  new_ui.h  queue.h  render.c  render.h  sorting.hpp  strings.h  types.h  ucf_gs_csp.c  ucf_gs_csp.h  ui.h  ui_render.h  ui_viewer.h  vector.h  vk_render.h  window_creation.h  zmq_proxy.h
code/Samples/: CsvTest.cpp  DrawSample.c  ObjLoad.cpp  RenderLibrary.c  ToDoList.cpp  UI_Sample.c  UI_Sample.h
code/Samples/shaders/: obj_showcase.frag  obj_showcase.frag.spv  obj_showcase.vert  obj_showcase.vert.spv
code/encoders/: csv_encoding.cpp  csv_encoding.h  obj_encoding.cpp  obj_encoding.h
code/os_linux/: events.h  surface.h
code/os_windows/: events.h  surface.h  threading.h
data/: ColoredTriangle.frag  ColoredTriangle.frag.spv  ColoredTriangle.vert  ColoredTriangle.vert.spv  Sample.frag  Sample.frag.spv  Sample.vert  Sample.vert.spv  compute.comp  compute.comp.spv  line.frag  line.vert  ui_render.frag  ui_render.frag.spv  ui_render.vert  ui_render.vert.spv
math/: math.cpp  math.h
memory/: allocator.h  buddy_allocator.h  memory.cpp  memory.h  pool_allocator.h
memory/linux/: memory_linux_impl.cpp  memory_linux_impl.h
memory/win/: memory_win_impl.cpp  memory_win_impl.h
render/: vulkan_impl.cpp  vulkan_impl.h
samples/directWriteD2D1/: samples.cpp  vc140.rdi
samples/memory/: memory_test.cpp  memory_test.ilk
samples/sample_vector/: sample_vector.cpp
samples/vulkan_sample/: vulkan_sample.cpp
types/: types.h
vector/: LightHash.cpp  LightHash.h  vector.cpp  vector.h
